# mono

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  diffs.json  mono.code-workspace  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-plz.toml  revert.py
apps/controlmylights/controlmylights_server/: Cargo.toml  build.rs
apps/controlmylights/controlmylights_server/src/: client_assets_handler.rs  config.rs  led_repo.rs  lib.rs  main.rs
apps/controlmylights/controlmylights_server/src/api_router/: mod.rs  ws_tx_handler.rs
apps/grappl/grappl_game/: Cargo.toml  Grappl.map.json
apps/grappl/grappl_game/assets/: tiles.aseprite  tiles_test.aseprite
apps/grappl/grappl_game/src/: main.rs
apps/grappl/grappl_game/src/resources/: mod.rs
libs/tuples/: Cargo.toml  README.md
libs/tuples/src/: index.rs  lib.rs
libs/tuples/src/traits/: as_cons_tuple.rs  can_prepend.rs  cons_tuple.rs  flat.rs  has.rs  has_one_of.rs  iter.rs  mod.rs  pair.rs  superset.rs
public/apps/the_peoples_edh_bracket/the_peoples_edh_bracket_server/: .env.example  Cargo.toml  README.md  build.rs  docker-compose.yml
public/apps/the_peoples_edh_bracket/the_peoples_edh_bracket_server/.cargo/: config.toml
public/apps/the_peoples_edh_bracket/the_peoples_edh_bracket_server/.sqlx/: query-0d282c7aa32b0961dcbf32e272a76ce7bd1e04c93f0eda4f3cb494ad46f90cf3.json  query-1d52eccb4c162331b2951605c33b6ef92b58e1b0b1211053aaed2634bff37b01.json  query-2099533a3815aefc255567f17cb70d4a1e1e5809124481ffe8d4155e0d0487ab.json  query-258ab46f865499afff8c71ec605b720a774c7803b9c9ec09574f13ddd3da7eaf.json  query-2590f4b38582b5bab6a6b30a3167254263f7f55918df0ec5a678c028f54f1e7a.json  query-286c9e2e6b1ab68fd3bf5daa9af1dc45ed5f19ac7e8dbccb0a77cabb5dcd948c.json  query-2a4a6d0cdb0c122efb96139f6d88d19218ae0a047113898aec8f9dfa1ec003ea.json  query-2e9da47e8fdfd491855e1820c4c38eca4b6ed199340d1bcb9a61fbe59771e81c.json  query-2f610f6d785fbb3abae330560e9bc74ad7bf6d98e68c8eb81bebf504ab24a176.json  query-37c48f71ad2caf483f3bd3b51ec1f4d19d44c3fe50dce1e6cb55a57ffb5605cd.json  query-387178630d9c7d33efceac51e090258faa28075477ac1fded2e9cdb1d628e167.json  query-39a324d4cbd9068aaa70db2e3606badccb58a6128ac1876d8b805c9d9c69ba26.json  query-3ed87adf49bc2097b6eec767a5ada1dc1470515d5e7596a239bb4022a23a331d.json  query-3f3917b26f1d6f6d125f04159627b97ecee44ac042469466a23c2e60a137a784.json  query-415ce1497af55b79dbc760a8dbd8795d0abff698c766ea2f885378eb14366787.json  query-4d19a475ec231306615f5128c4bf4ba48f691203689bcde8f21c05215142c5fa.json  query-4fe767fc36beb1a0895d6ca34b0c4b9a7d56aa91e38c7318fa8d8a243142551f.json  query-53276d53498cef3a0ae911dc7df71c3cc7f9155d54c1e3e44619248a1ab7a55f.json  query-53b3b1f43b29bd8190cd88be5e0056d213925441f1cde87b889616733708f233.json  query-5c374c5b3ff043a97405daef5a6b1414df3947cf407792da58cbcdf633cdcf6d.json  query-61202c13b290aa21418a3a3b087fd21cf5329b06964084553d34c69caf4347ef.json  query-620c36c54faaaf02292a0adb532f6838c0671924d606d4f3e9cddf28b1f16282.json  query-631ccbb5027c86c606e274fea5b066490632742f348f3a7af5d8aa0ebf8db85b.json  query-6a78d8d7a71d7d9faa045874d8b7cd5d02034bf023c99355726525b84f0f5791.json  query-779fef79f3f41ebb98fad78b7155b912fdc848be97ef78909d3ac0a8074e40c5.json  query-7adfda69b82111bf5f7ec5d0bc63dbd88eb632ff3574c3a8c740bc024eeabe8b.json  (+22 more)
(+549 files in other folders)
