[package]
name = "controlmylights_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["ws"] }
chrono = "0.4.44"
futures = "0.3.32"
serde = "1.0.228"
serde-envfile = "0.3.0"
serde-inline-default = "1.0.1"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["fs", "trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [
	"fmt",
	"env-filter",
	"json",
] }
uuid = { version = "1.23.0", features = ["v4"] }
