[package]
name = "the_peoples_edh_bracket_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "=0.8.8", features = ["macros"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.11", features = ["trace", "cors"] }
sqlx = { version = "0.9.0", features = [
	"runtime-tokio",
	"postgres",
	"uuid",
	"bigdecimal",
	"chrono",
] }
uuid = { version = "1", features = ["v4", "serde"] }
serde-envfile = "0.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde-inline-default = "1.0.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [
	"fmt",
	"env-filter",
	"json",
] }
reqwest = { version = "0.13.4", features = ["json", "query", "stream"] }
bigdecimal = { version = "0.4.10", features = ["serde"] }
thiserror = "2.0.18"
axum-anyhow = "0.11.3"
futures-util = "0.3.32"
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1.0.150"
strum = { version = "0.28.0", features = ["derive"] }
ts-rs = { version = "12.0.1", features = [
	"uuid-impl",
	"bigdecimal-impl",
	"chrono-impl",
] }
names = "0.14.0"
validator = { version = "0.20.0", features = ["derive"] }
chrono = { version = "0.4.45", features = ["serde"] }
